blueprint/k8s/web-app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: omni-streaming
  labels:
    name: omni-streaming
