blueprint/k8s/web-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-app
  namespace: omni-streaming
  labels:
    app: web-app
spec:
  type: ClusterIP
  selector:
    app: web-app
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
