blueprint/k8s/web-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-app
  namespace: omni-streaming
  labels:
    app.kubernetes.io/component: web-ui
    app.kubernetes.io/instance: web-app
    app.kubernetes.io/managed-by: manual
    app.kubernetes.io/name: web-app
  annotations:
    kubernetes.io/ingress.class: internal-nginx
    nginx.ingress.kubernetes.io/cors-allow-credentials: 'true'
    nginx.ingress.kubernetes.io/cors-allow-headers: >-
      DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization,Accept,Origin
    nginx.ingress.kubernetes.io/cors-allow-methods: GET, PUT, POST, DELETE, PATCH, OPTIONS
    nginx.ingress.kubernetes.io/cors-allow-origin: '*'
    nginx.ingress.kubernetes.io/cors-expose-headers: Content-Length,Content-Range
    nginx.ingress.kubernetes.io/cors-max-age: '86400'
    nginx.ingress.kubernetes.io/enable-cors: 'true'
    nginx.ingress.kubernetes.io/hsts: 'true'
    nginx.ingress.kubernetes.io/hsts-include-subdomains: 'true'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  ingressClassName: internal-nginx
  rules:
    - host: frontend.example.com # <-- REPLACE with your frontend host (e.g. frontend.yourdomain.com)
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-app
                port:
                  number: 80
